增加布局页

--- a/PartyInvites/PartyInvites.csproj
+++ b/PartyInvites/PartyInvites.csproj
@@ -386,6 +386,7 @@
     <Content Include="packages.config" />
     <Content Include="Views\Home\RsvpForm.cshtml" />
     <Content Include="Views\Home\Thanks.cshtml" />
+    <Content Include="Views\_BasicLayout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
